--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ width:100px;
 font-size: 25px ;
 text-decoration: none;
 color:lightgoldenrodyellow;
+padding: 15px 32px;
 
 }
 
@@ -102,13 +103,35 @@ height: 20px;
 
 }
 
-label {
+#txt {
 
 	clear: both;
 }
 
 #addTop {
 
+	margin-left: 1780px;
+	margin-top: 20px;
+
+	
+
+}
+
+
+#search {
+
+
 	float:right;
 
+  
+ 
+}
+
+
+
+#srch {
+	background-color: lightgoldenrodyellow;
+
+
+	float:right;
 }
